welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: not found: value murs
  if (estFaceMur()==true){murs=mur+1;
                          ^SnakeBuggle:18: error: not found: value murs
    if (murs%2==0){
        ^SnakeBuggle:22: error: not found: value murs
  return murs
         ^SnakeBuggle:22: warning: enclosing method serpent has result type Unit: return value discarded
  return murs
  ^SnakeBuggle:27: error: type mismatch;
 found   : Unit
 required: Int
do {nombres_mur = serpent(nombres_mur)} while(postion_finale()==false)
                         ^